--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ nav li {
   box-shadow: 3px -3px 10px 0px #333333;
   z-index: 10; }
   #pane header {
-    background: #00aef0;
+    background: #006faa;
     overflow: hidden;
     /* for #logo at small widths */
     width: 100%; }
@@ -94,10 +94,12 @@ header nav li {
 .download-item {
   min-height: 110px;
   border-bottom: 1px dotted #ccc; }
-  .download-item h3, .download-item p {
+  .download-item h2, .download-item h3, .download-item p {
     margin-left: 60px; }
-  .download-item h3 {
-    margin-top: 15px; }
+  .download-item h2, .download-item h3 {
+    margin-top: 15px;
+    font-size: 1.8rem;
+    line-height: 2.8rem; }
   .download-item a.link {
     display: block;
     margin: 0 0 0 0px;
@@ -128,8 +130,9 @@ header nav li {
     height: 120px; }
   .biographies .biography:last-child {
     border: 0px; }
-.biographies h4 {
-  line-height: 1.6rem; }
+.biographies h2 {
+  line-height: 1.6rem;
+  font-size: 1.6rem; }
 
 /* align */
 div.fb-like
